# Portfolio

./: README.md
Web_Page/reactapp/src/: App.css  App.jsx
leet_code/: CMakeLists.txt  main.cpp
leet_code/menu/: menu.cpp  menu.h
leet_code/problems/: problems.cpp  problems.h
login_and_registration_system/: CMakeLists.txt  main.cpp  register.cpp  register.h  useful.cpp  useful.h
login_registation_system/: CMakeLists.txt  logins.cpp  logins.h  main.cpp  person.cpp  person.h  useful.h
my-web-site/: package-lock.json  package.json
my-web-site/frontend/: package-lock.json  package.json
my-web-site/frontend/src/: App.css  App.jsx
new_amazon/: README.md  pubspec.yaml
new_amazon/android/app/: build.gradle.kts
new_amazon/android/app/src/main/: AndroidManifest.xml
new_amazon/ios/Runner/: Info.plist
new_amazon/ios/Runner.xcodeproj/: project.pbxproj
new_amazon/lib/: main.dart  routing.dart
new_amazon/lib/API/: database.dart
new_amazon/lib/components/: app_bar.dart  bottomNavigation.dart  notifications_appBar.dart  search_bar.dart
new_amazon/lib/database/: database.dart
new_amazon/lib/pages/: notifications_page.dart
new_amazon/linux/: CMakeLists.txt
new_amazon/linux/runner/: my_application.cc
new_amazon/macos/Runner.xcodeproj/: project.pbxproj
new_amazon/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
new_amazon/macos/Runner/Configs/: AppInfo.xcconfig
new_amazon/test/: widget_test.dart
new_amazon/web/: index.html  manifest.json
new_amazon/windows/: CMakeLists.txt
new_amazon/windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
